-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 2.4.0
-
46ef3f302704233527a5cae66c03ef2fa0d0b6c2 (qt-creator/qt-creator/master)
Any code generated by for designer or class wizard should use non-keyword macros (Q_SLOTS instead of slots etc) when current project is configured with no_keywords.
| For Gerrit Dashboard: QTCREATORBUG-6812 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 268322,2 | "New class" wizard: Respect the project's "no Qt keywords" setting | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |